--- a/locales/kk.strings
+++ b/locales/kk.strings
@@ -206,7 +206,7 @@
 "outcoming_req" = "Өтінімдер";
 "req" = "Өтінімдер";
 
-"firends_zero" = "Достарыңыз жоқ";
+"friends_zero" = "Достарыңыз жоқ";
 "friends_one" = "$1 дос";
 "friends_other" = "$1 дос";
 
