--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -208,7 +208,7 @@
 
 "req_zero" = "Не найдено ни одной заявки...";
 "req_one" = "Найдена $1 заявка";
-"req_few" = "Найлено $1 заявки";
+"req_few" = "Найдено $1 заявки";
 "req_many" = "Найдено $1 заявки";
 "req_other" = "Найдено $1 заявок";
 
