--- a/locales/ru_old.strings
+++ b/locales/ru_old.strings
@@ -190,7 +190,7 @@
 "outcoming_req" = "Входящіе прошенія";
 "req" = "Исходящіе прошенія";
 
-"firends_zero" = "Ни одного знакомца";
+"friends_zero" = "Ни одного знакомца";
 "friends_one" = "$1 знакомецъ";
 "friends_few" = "$1 знакомца";
 "friends_many" = "$1 знакомцевъ";
