Videos: Redesign preview and list

--- a/locales/en.strings
+++ b/locales/en.strings
@@ -513,6 +513,8 @@
 "videos_one" = "$1 video";
 "videos_other" = "$1 videos";
 
+"view_video" = "View";
+
 /* Notifications */
 
 "feedback" = "Feedback";
