Add audio upload feature

--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -545,6 +545,29 @@
 
 "view_video" = "Просмотр";
 
+/* Audios */
+
+"audios" = "Аудиозаписи";
+"audio" = "Аудиозапись";
+"upload_audio" = "Загрузить аудио";
+
+"performer" = "Исполнитель";
+"audio_name" = "Имя композиции";
+"genre" = "Жанр";
+"lyrics" = "Текст";
+
+"limits" = "Ограничения";
+"select_audio" = "Выберите аудиозапись на Вашем компьютере";
+"audio_requirements" = "Аудиозапись должна быть длинной от $1c до $2 минут, весить до $3мб, содержать аудиопоток и не нарушать авторские права.";
+"you_can_also_add_audio_using" = "Вы также можете добавить аудиозапись из числа уже загруженных файлов, воспользовавшись";
+"search_audio_inst" = "поиском по аудио";
+
+"audio_embed_not_found" = "Аудиозапись не найдена";
+"audio_embed_deleted" = "Аудиозапись была удалена";
+"audio_embed_withdrawn" = "Аудиозапись была изъята по обращению правообладателя";
+"audio_embed_forbidden" = "Настройки приватности пользователя не позволяют встраивать эту композицию";
+"audio_embed_processing" = "Композиция ещё обрабатывается";
+
 /* Notifications */
 
 "feedback" = "Ответы";
@@ -807,6 +830,7 @@
 "no_data_description" = "Тут ничего нет... Пока...";
 
 "error" = "Ошибка";
+"error_generic" = "Произошла ошибка общего характера: ";
 "error_shorturl" = "Данный короткий адрес уже занят.";
 "error_segmentation" = "Ошибка сегментации";
 "error_upload_failed" = "Не удалось загрузить фото";
@@ -814,6 +838,7 @@
 "error_new_password" = "Новые пароли не совпадает";
 "error_shorturl_incorrect" = "Короткий адрес имеет некорректный формат.";
 "error_repost_fail" = "Не удалось поделиться записью";
+"error_insufficient_info" = "Вы не указали необходимую информацию.";
 
 "forbidden" = "Ошибка доступа";
 "forbidden_comment" = "Настройки приватности этого пользователя не разрешают вам смотреть на его страницу.";
