L10n (Kazakh): Add missing semicolon

--- a/locales/kk.strings
+++ b/locales/kk.strings
@@ -398,7 +398,7 @@
 
 "default" = "әдепкі";
 
-"arbitrary_avatars" = "Ерікті"
+"arbitrary_avatars" = "Ерікті";
 "cut" = "Шаршы";
 "round_avatars" = "Дөңгелек";
 
