Support: Allow agents to prevent users from creating tickets

--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -725,6 +725,9 @@
 "ticket_changed" = "Тикет изменён";
 "ticket_changed_comment" = "Изменения вступят силу через несколько секунд.";
 
+"banned_in_support_1" = "Извините, <b>$1</b>, но теперь вам нельзя создавать обращения.";
+"banned_in_support_2" = "А причина этому проста: <b>$1</b>. К сожалению, на этот раз нам пришлось отобрать у вас эту возможность навсегда.";
+
 /* Invite */
 
 "invite" = "Пригласить";
@@ -875,6 +878,8 @@
 "manage_group_action" = "Управление группой";
 "ban_user_action" = "Заблокировать пользователя";
 "warn_user_action" = "Предупредить пользователя";
+"ban_in_support_user_action" = "Заблокировать в поддержке";
+"unban_in_support_user_action" = "Разблокировать в поддержке";
 
 /* Paginator (deprecated) */
 
