--- a/locales/en.strings
+++ b/locales/en.strings
@@ -558,6 +558,8 @@
 "points" = "Votes";
 "points_count" = "votes";
 "on_your_account" = "on your account";
+"top_up_your_account" = "Get more";
+"you_still_have_x_points" = "You have <b>$1</b> unused votes.";
 
 "vouchers" = "Vouchers";
 "have_voucher" = "Have voucher";
