--- a/locales/en.strings
+++ b/locales/en.strings
@@ -851,6 +851,7 @@
 "admin_name" = "Name";
 "admin_title" = "Title";
 "admin_description" = "Description";
+"admin_first_known_ip" = "First known IP";
 "admin_shortcode" = "Short code";
 "admin_verification" = "Verification";
 "admin_banreason" = "Ban reason";
@@ -895,6 +896,15 @@
 "admin_giftsets_title" = "The internal name of the set, which will be used if no name can be found in the user's language.";
 "admin_giftsets_description" = "The internal description of the set, which will be used if no name can be found in the user's language.";
 "admin_price_free" = "free";
+"admin_voucher_rating" = "Rating";
+"admin_voucher_serial" = "Serial number";
+"admin_voucher_serial_desc" = "The number consists of 24 characters. If the format is incorrect or the field is not filled in, it will be assigned automatically.";
+"admin_voucher_coins" = "Number of votes";
+"admin_voucher_rating" = "Number of rating";
+"admin_voucher_usages_desc" = "The number of accounts that can use the voucher. If you type -1, it will be infinity.";
+"admin_voucher_status" = "Status";
+"admin_voucher_status_opened" = "active";
+"admin_voucher_status_closed" = "closed";
 
 "admin_settings" = "Settings";
 "admin_settings_tuning" = "General";
@@ -906,6 +916,9 @@
 "admin_about" = "About OpenVK";
 "admin_about_version" = "Version";
 "admin_about_instance" = "Instance";
+
+"admin_commerce_disabled" = "Commerce has been disabled by the system administrator";
+"admin_commerce_disabled_desc" = "The voucher and gift settings will be saved, but will have no effect.";
 
 /* Paginator (deprecated) */
 
