--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -1023,3 +1023,8 @@
 /* User alerts */
 
 "user_alert_scam" = "На этот аккаунт много жаловались в связи с мошенничеством. Пожалуйста, будьте осторожны, особенно если у вас попросят денег.";
+
+/* Cookies pop-up */
+
+"cookies_popup_content" = "Все дети любят печенья, поэтому этот вебсайт использует Cookies чтобы идентифицировать вас и ничего более. Ознакомьтесь с нашей <a href='/privacy'>политикой конфиденциальности</a> для получения дополнительной информации.";
+"cookies_popup_agree" = "Согласен";
