Locale (RU): Fix cookie splash
I decided to fix author's mistake =))))))))))))))))))))))))))))))))

--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -1026,5 +1026,5 @@
 
 /* Cookies pop-up */
 
-"cookies_popup_content" = "Все дети любят печенья, поэтому этот вебсайт использует Cookies чтобы идентифицировать вас и ничего более. Ознакомьтесь с нашей <a href='/privacy'>политикой конфиденциальности</a> для получения дополнительной информации.";
+"cookies_popup_content" = "Все дети любят печенье, поэтому этот веб-сайт использует Cookies для того, чтобы идентифицировать вашу сессию и ничего более. Ознакомьтесь с нашей <a href='/privacy'>политикой конфиденциальности</a> для получения дополнительной информации.";
 "cookies_popup_agree" = "Согласен";
